[package]
name = "websocket-shell"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/33671/websocket-shell"
homepage = "https://github.com/33671/websocket-shell"
readme = "README.md"
description = "A websocket based arbitrary shell command executor with long-keeping and reusable input and output."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf8-read = "0.4.0"
tokio-tungstenite = "0.20"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.29"
